# config_interview

./: LICENSE  README.md  pyproject.toml
src/config_interview/: __init__.py  builder.py  error.py  validator.py  value.py
tests/: main.py  test_simple.py
