[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "config_interview"
version = "0.0.1"
authors = [
  { name="Skaidon", email="skaidon.t3ch@gmail.com" },
]
description = "Create and conduct interactive configuration interviews"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"
